force-app/main/default/objects/Case/Case.object-meta.xml
<CustomObject>
    <!--
      OWD is Private, matching the live org (verified 2026-08-22 against usman-dpeg via
      EntityDefinition.InternalSharingModel). This file previously carried ReadWriteTransfer,
      which was stale drift hidden by the blanket objects/Case/** .forceignore entry. Removing
      that entry for the FSD v1.1 AR build made the drift deployable, and it would have silently
      downgraded every Case to org-wide read/write/transfer. Do not "restore" ReadWriteTransfer.
    -->
    <sharingModel>Private</sharingModel>
</CustomObject>