force-app/main/default/objects/Case/fields/Auto_Closed_By_Sync__c.field-meta.xml
<CustomField>
    <fullName>Auto_Closed_By_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks a Case the nightly sync closed itself because the balance cleared in Yardi (FSD 5.9.6 step 6, UAT AR-004). Distinguishes a resolution DPEG worked for from one that simply stopped being a problem - and if this is ticked on a Case nobody ever touched, the threshold is probably too low.</description>
    <inlineHelpText>Ticked when the nightly sync closed this Case because the balance cleared.</inlineHelpText>
    <label>Auto Closed By Sync</label>
    <type>Checkbox</type>
</CustomField>