force-app/main/default/objects/Case/fields/Balance_At_Open_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_At_Open_Amount__c</fullName>
    <description>The balance stamped at the instant the Case was opened (FSD 5.9.6 step 4). Immutable evidence of what triggered the Case, which the refreshing current balance destroys.</description>
    <inlineHelpText>What the balance was when this Case opened. Never changes.</inlineHelpText>
    <label>Balance At Open Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>