force-app/main/default/objects/Case/fields/Current_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance_Amount__c</fullName>
    <description>Balance refreshed from the mirror on every nightly run (FSD 5.9.6 step 3). Compare against Balance At Open to see whether chasing has moved anything.</description>
    <inlineHelpText>The balance as of the last nightly sync.</inlineHelpText>
    <label>Current Balance Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>