force-app/main/default/objects/Case/fields/Current_Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Current_Days_Past_Due__c</fullName>
    <description>Days past due refreshed from the mirror on every nightly run (FSD 5.9.6 step 3). Drives the escalation ladder and the dashboard flag.</description>
    <inlineHelpText>How far past due the tenant is as of the last nightly sync.</inlineHelpText>
    <label>Current Days Past Due</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>