force-app/main/default/objects/Case/fields/Days_Past_Due_At_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Past_Due_At_Open__c</fullName>
    <description>Days past due stamped at the instant the Case was opened (FSD 5.9.6 step 4). Paired with Balance At Open as the immutable record of the trigger condition.</description>
    <inlineHelpText>How far past due the tenant was when this Case opened. Never changes.</inlineHelpText>
    <label>Days Past Due At Open</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>