force-app/main/default/objects/Case/fields/Escalated_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Escalated_DateTime__c</fullName>
    <description>When the escalation level was last raised. Distinguishes a Case that escalated last night from one stuck at the same level for weeks.</description>
    <inlineHelpText>When this Case last escalated.</inlineHelpText>
    <label>Escalated</label>
    <type>DateTime</type>
</CustomField>