force-app/main/default/objects/Case/fields/Next_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_Up_Date__c</fullName>
    <description>The date the property manager committed to acting again (FSD 5.9.7 trigger 6). When it passes with no new Case Comment, the Case appears on the FSD 6.5 overdue list and the PM is reminded.</description>
    <inlineHelpText>When you will next chase this. Passing this date with no comment puts the Case on the overdue list.</inlineHelpText>
    <label>Next Follow Up Date</label>
    <type>Date</type>
</CustomField>