force-app/main/default/objects/Case/fields/Property_Asset__c.field-meta.xml
<CustomField>
    <fullName>Property_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The property this delinquency sits on. Denormalised onto the Case so the FSD 6.5 by-property views and the FSD 7 property-scoped role visibility do not depend on traversing the mirror, which a user may not be able to see.</description>
    <inlineHelpText>The property this delinquency belongs to.</inlineHelpText>
    <label>Property Asset</label>
    <referenceTo>Property_Asset__c</referenceTo>
    <relationshipLabel>Delinquency Cases</relationshipLabel>
    <relationshipName>Delinquency_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>