force-app/main/default/objects/Case/fields/Receivables_Summary__c.field-meta.xml
<CustomField>
    <fullName>Receivables_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The mirror row this Case was opened from - the join between the money (Yardi) and the workflow (Salesforce). The sync refreshes the Case from here; it never writes workflow state back onto the mirror.</description>
    <inlineHelpText>The Yardi balance this Case is chasing.</inlineHelpText>
    <label>Receivables Summary</label>
    <referenceTo>Receivables_Summary__c</referenceTo>
    <relationshipLabel>Delinquency Cases</relationshipLabel>
    <relationshipName>Delinquency_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>