force-app/main/default/objects/Case/fields/Reopened_Count__c.field-meta.xml
<CustomField>
    <fullName>Reopened_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many times this Case has been reopened, typically after a missed payment-plan instalment (FSD 5.9.7 row 5). A repeatedly reopened Case is a different conversation from a first breach.</description>
    <inlineHelpText>How many times this Case has been reopened after resolving.</inlineHelpText>
    <label>Reopened Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>