force-app/main/default/objects/Case/fields/Resolution_Path__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Path__c</fullName>
    <description>FSD 5.9.5’s two tracks. Collect means the tenant genuinely owes the money - contact, promise, notice, escalation. Correct means the charge is wrong, duplicated or carried forward from a previous owner - fix it in Yardi and the balance clears on the next sync WITHOUT contacting the tenant. This separation is what stops tenants being pursued for charges DPEG should not have billed, and roughly a third of today’s delinquency notes are corrections rather than collections.</description>
    <inlineHelpText>Collect = the tenant owes it. Correct = the charge is wrong and gets fixed in Yardi, not chased.</inlineHelpText>
    <label>Resolution Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collect</fullName>
            </value>
            <value>
                <fullName>Correct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>