force-app/main/default/objects/Case/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The unit this delinquency sits on, matching the mirror grain (user decision D-AR-4). A tenant in several suites gets one Case per suite.</description>
    <inlineHelpText>The unit this delinquency belongs to.</inlineHelpText>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Delinquency Cases</relationshipLabel>
    <relationshipName>Delinquency_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>