force-app/main/default/objects/Case/fields/Write_Off_Decided_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Decided_DateTime__c</fullName>
    <description>When the write-off decision was recorded. Gives the turnaround time on principal decisions, which FSD 6.5 surfaces as a queue.</description>
    <inlineHelpText>When the write-off decision came back.</inlineHelpText>
    <label>Write Off Decided</label>
    <type>DateTime</type>
</CustomField>