force-app/main/default/objects/Case/fields/Write_Off_Decision__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Decision__c</fullName>
    <description>Outcome of the write-off request. Pending is the state the FSD 6.5 "awaiting principal" view filters on.</description>
    <inlineHelpText>The principal’s decision on the write-off request.</inlineHelpText>
    <label>Write Off Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>