force-app/main/default/objects/Case/fields/Write_Off_Requested__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when a write-off is put to the principal (FSD 5.9.7 row 7). The Case is held at Escalated to Principal until the decision comes back.</description>
    <inlineHelpText>Ticked when a write-off has been requested for this balance.</inlineHelpText>
    <label>Write Off Requested</label>
    <type>Checkbox</type>
</CustomField>