force-app/main/default/objects/Case/fields/Write_Off_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Requested_Amount__c</fullName>
    <description>The amount being put forward for write-off. Deliberately separate from Current Balance Amount - a partial write-off is common, and the balance keeps moving underneath while the request is pending.</description>
    <inlineHelpText>How much is being requested for write-off. May be less than the full balance.</inlineHelpText>
    <label>Write Off Requested Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>