force-app/main/default/objects/Case/fields/Yardi_AR_Id__c.field-meta.xml
<CustomField>
    <fullName>Yardi_AR_Id__c</fullName>
    <description>Denormalises the Receivables Summary external id onto the Case for the duplicate-Case guard. Deliberately NOT unique: a tenant who clears a balance and later re-delinquents must be able to get a SECOND Case.</description>
    <externalId>true</externalId>
    <label>Yardi AR Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>