force-app/main/default/objects/Case/recordTypes/Delinquency.recordType-meta.xml
<RecordType>
    <!--
      THIS COMMENT IS INSIDE THE ROOT ELEMENT ON PURPOSE - a comment above the root breaks sf
      at source conversion.

      🔴 DO NOT "CLEAN SYNC" THIS FILE FROM THE ORG. A RecordType retrieve comes back carrying
      only fullName / active / businessProcess / label - every <picklistValues> block is
      STRIPPED. Committing that retrieve deletes every restriction below, and because an
      omitted picklist drops all its values for this record type, the result is a silent
      production regression that no API can read back. This file is the only record of these
      restrictions.

      Every picklist on Case is enumerated below EXCEPT Status, which is governed by
      <businessProcess> instead. Reason is deliberately cut to the four FSD 5.9.5 delinquency
      reasons - the seven stock equipment-support reasons stay in standardValueSets/CaseReason
      for a future stock-Case record type but must never appear on a delinquency.

      Record-type picklist restriction IS ENFORCED AT DML on this project (measured four
      times). Consequence: this file must deploy BEFORE any Apex or test that writes one of
      these values, and adding a value to a record type silently REMOVES a platform backstop
      that was previously refusing bad writes.
    -->
    <fullName>Delinquency</fullName>
    <active>true</active>
    <businessProcess>Delinquency_Support_Process</businessProcess>
    <description>Tenant delinquency follow-up (FSD 5.9). The Case holds all workflow state - stage, escalation, commitments, write-off - while the balance itself stays in the read-only Receivables Summary mirror.</description>
    <label>Delinquency</label>
</RecordType>