force-app/main/default/objects/Case/listViews/Delinquency_Awaiting_Principal.listView-meta.xml
<ListView>
    <fullName>Delinquency_Awaiting_Principal</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>Resolution_Path__c</columns>
    <columns>Current_Balance_Amount__c</columns>
    <columns>Write_Off_Requested_Amount__c</columns>
    <columns>Write_Off_Decision__c</columns>
    <columns>Escalation_Level__c</columns>
    <columns>Escalated_DateTime__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Write_Off_Requested__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Write_Off_Decision__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Delinquency - Awaiting Principal</label>
</ListView>