force-app/main/default/objects/Case/listViews/Delinquency_Billing_Corrections.listView-meta.xml
<ListView>
    <fullName>Delinquency_Billing_Corrections</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>Current_Balance_Amount__c</columns>
    <columns>Current_Days_Past_Due__c</columns>
    <columns>Days_Since_Last_Follow_Up__c</columns>
    <columns>Next_Follow_Up_Date__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Resolution_Path__c</field>
        <operation>equals</operation>
        <value>Correct</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Resolved,Closed</value>
    </filters>
    <label>Delinquency - Billing Corrections</label>
</ListView>