force-app/main/default/objects/Case/listViews/Open_Delinquency_Cases.listView-meta.xml
<ListView>
    <fullName>Open_Delinquency_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>Resolution_Path__c</columns>
    <columns>Current_Balance_Amount__c</columns>
    <columns>Current_Days_Past_Due__c</columns>
    <columns>Dashboard_Flag__c</columns>
    <columns>Escalation_Level__c</columns>
    <columns>Days_Since_Last_Follow_Up__c</columns>
    <columns>Next_Follow_Up_Date__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Yardi_AR_Id__c</field>
        <operation>notEqual</operation>
        <value></value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Resolved,Closed</value>
    </filters>
    <label>Open Delinquency Cases</label>
</ListView>